--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="br.com.everson.cerveja.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_estatisticas"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_estatisticas"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_milestones"
+        android:orderInCategory="100"
+        android:title="@string/action_milestones"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_amizades"
+        android:orderInCategory="100"
+        android:title="@string/action_amizades"
         app:showAsAction="never" />
 </menu>
